Fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 /* Mobile first version */
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
+  overflow-x: hidden;
 }
 
 /* Header */
@@ -393,6 +395,7 @@ form {
     background-repeat: no-repeat;
     background-position: top right;
     background-size: contain;
+    padding-bottom: 3rem;
   }
 
   div#greeting {
@@ -441,7 +444,7 @@ form {
 
   .title {
     font-size: 5rem;
-    padding-top: 15rem;
+    padding-top: 12rem;
   }
 
   .title span {
@@ -454,7 +457,7 @@ form {
   }
 
   .description-p {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 2.5rem;
   }
 
